Updated styling, squashed bugs, added additional buttons and functionality

--- a/style.css
+++ b/style.css
@@ -1,16 +1,69 @@
+@font-face {
+    font-family: retro-gaming-title;
+    src: url("https://fonts.googleapis.com/css?family=Audiowide");
+}
+
+h1, h3 {
+    text-align: center;
+    font-family: "Press Start 2P";
+}
+
+h1 {
+    padding-top: 10px;
+}
+
 .grid {
     display: grid;
     width: 289px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     grid-template-rows: 70px 70px 70px 70px;
     grid-template-columns: 70px 70px 70px 70px;
     grid-gap: 3px;
+}
+
+#victory {
+    display: none;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 50%;
+}
+
+#trophy {
+    display: block;
+    margin: auto;
+}
+
+#button-div {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+.button {
+    display: inline-block;
+    margin: auto;
+    border: 2px dashed black;
+    text-align: center;
+    width: 200px;
+}
+
+.button:hover {
+    background-color: lightgray;
+}
+
+.button:active {
+    background-color: grey;
 }
 
 square {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+}
+
+square:hover {
+    transform: scale(1.025);
 }
